--- a/content/index.html
+++ b/content/index.html
@@ -12,6 +12,7 @@
 <link rel=stylesheet href=https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css integrity=sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u crossorigin=anonymous>
 <link rel=stylesheet href=https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css integrity=sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp crossorigin=anonymous>
 <link rel=stylesheet href=/css/kyuubi.css>
+<script src=https://www.apachecon.com/event-images/snippet.js></script>
 </head>
 <body>
 <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -57,10 +58,11 @@
 </ul>
 </li>
 <li class=dropdown>
-<a href=# class=dropdown-toggle data-toggle=dropdown role=button aria-haspopup=true aria-expanded=false>Help <span class=caret></span></a>
+<a href=# class=dropdown-toggle data-toggle=dropdown role=button aria-haspopup=true aria-expanded=false>ASF <span class=caret></span></a>
 <ul class=dropdown-menu>
-<li><a href=https://www.apache.org/licenses/>Apache Licenses</a></li>
-<li><a href="https://apachecon.com/?ref=www.apache.org">Events</a></li>
+<li><a href=https://www.apache.org/events/current-event>Events</a></li>
+<li><a href=https://www.apache.org/>Foundation</a></li>
+<li><a href=https://www.apache.org/licenses/>License</a></li>
 <li><a href=https://www.apache.org/security/>Security</a></li>
 <li><a href=https://www.apache.org/foundation/sponsorship.html>Sponsorship</a></li>
 <li><a href=https://www.apache.org/foundation/thanks.html>Thanks</a></li>
@@ -89,8 +91,11 @@
 <div class=container>
 <div class=row>
 <div class=col-md-4>
-<h2>Latest news</h2>
 <div class=col-md-12>
+<p><a class=acevent data-format=wide data-mode=light data-width=320></a></p>
+</div>
+<div class=col-md-12>
+<h2>Latest news</h2>
 <div class="panel panel-default">
 <div class="panel-heading clearfix"><a class=pull-left href=/news/2022-01-31-release-1.4.1-incubating.html>Apache Kyuubi(Incubating) 1.4.1-incubating released</a> <small class=pull-right>2022 Jan 30 </small></div>
 <div class=panel-body>
@@ -121,6 +126,9 @@
 <p>Kyuubi is accepted into Apache Incubator, see details in <a href=https://incubator.apache.org/projects/kyuubi>incubation status</a>.</p>
 </div>
 </div>
+</div>
+<div class=col-md-12>
+<h2>Archives</h2>
 <p><a class=next href=/release.html>Release archive &rarr;</a></p>
 <p><a class=next href=/news.html>News archive &rarr;</a></p>
 </div>
