deploy: 824889c2391bbb798040dc53950be1d79cc81b84

--- a/content/index.html
+++ b/content/index.html
@@ -82,9 +82,9 @@
 <p><img src=kyuubi_logo.png title=kyuubi-logo width=200px>Apache Kyuubi (Incubating)</p>
 <p>Kyuubi is a distributed multi-tenant Thrift JDBC/ODBC server for large-scale data management, processing, and analytics, built on top of Apache Spark and designed to support more engines (i.e., Flink).</p>
 <p>
-<a class="btn btn-success btn-lg" href=docs/stable/quick_start role=button>Getting started &#187;</a>
+<a class="btn btn-success btn-lg" href=docs/latest/quick_start role=button>Getting started &#187;</a>
 <a class="btn btn-warning btn-lg" href=releases.html role=button>Download &#187;</a>
-<a class="btn btn-primary btn-lg" href=docs/stable role=button>Learn more &#187;</a>
+<a class="btn btn-primary btn-lg" href=docs/latest role=button>Learn more &#187;</a>
 </p>
 </div>
 </div>
