--- a/content/mailing_lists.html
+++ b/content/mailing_lists.html
@@ -78,9 +78,53 @@
 </nav>
 <div class=container>
 <h1>Kyuubi Mailing Lists</h1>
-<h2 id=mailing-lists>Mailing Lists</h2>
-<p><a href=mailto:dev@kyuubi.apache.org>dev@kyuubi.apache.org</a> is for people who want to contribute code to Kyuubi. (<a href=mailto:dev-subscribe@kyuubi.apache.org>subscribe</a>) (<a href=mailto:dev-unsubscribe@kyuubi.apache.org>unsubscribe</a>) (<a href=https://lists.apache.org/list.html?dev@kyuubi.apache.org>archives</a>)</p>
-<p><a href=mailto:commits@kyuubi.apache.org>commits@kyuubi.apache.org</a> is for people who want to see changed made in the Kyuubi version control system. (<a href=mailto:commits-subscribe@kyuubi.apache.org>subscribe</a>) (<a href=mailto:commits-unsubscribe@kyuubi.apache.org>unsubscribe</a>) (<a href=https://lists.apache.org/list.html?commits@kyuubi.apache.org>archives</a>)</p>
+<p>The Kyuubi developer mailing list is the preferred means for all your questions when using Kyuubi, which pushes your doubts out to the entire community.
+This is the best way to keep up-to-date with the community.</p>
+<p>Before you post anything to the mailing lists, be sure that you already <strong>subscribe</strong> to them.
+The currently available lists are listed in the below table.</p>
+<table>
+<thead>
+<tr>
+<th>List Name</th>
+<th>Address</th>
+<th>Subscribe</th>
+<th>Unsubscribe</th>
+<th>Archive</th>
+<th>Usages</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td><strong>Developer List</strong></td>
+<td><a href=mailto:dev@kyuubi.apache.org>dev@kyuubi.apache.org</a></td>
+<td><a href=mailto:dev-subscribe@kyuubi.apache.org>subscribe</a></td>
+<td><a href=mailto:dev-unsubscribe@kyuubi.apache.org>unsubscribe</a></td>
+<td><a href=https://lists.apache.org/list.html?dev@kyuubi.apache.org>archive</a></td>
+<td><ul><li>Use this list for your Kyuubi questions</li><li>Used by Kyuubi contributors to discuss development of Kyuubi</li><li>Sync discussions happen on Github Issues</li></ul></td>
+</tr>
+<tr>
+<td><strong>Commits List</strong></td>
+<td><a href=mailto:commits@kyuubi.apache.org>commits@kyuubi.apache.org</a></td>
+<td><a href=mailto:commits-subscribe@kyuubi.apache.org>subscribe</a></td>
+<td><a href=mailto:commits-unsubscribe@kyuubi.apache.org>unsubscribe</a></td>
+<td><a href=https://lists.apache.org/list.html?commits@kyuubi.apache.org>archive</a></td>
+<td><ul><li>Notifications on changes to the Kyuubi codebase</li></ul></td>
+</tr>
+</tbody>
+</table>
+<h2 id=steps-for-subscription>Steps for Subscription</h2>
+<p>Sending a subscription email is also very simple. The steps are as follows:</p>
+<ol>
+<li><strong>Subscribe</strong>: Click the <strong>subscribe</strong> button in the above table, and it redirects to your mail client. The subject and content are arbitrary.
+After that, you will receive a confirmation email from <a href=mailto:dev-help@kyuubi.apache.org>dev-help@kyuubi.apache.org</a> (if not received, please confirm whether the email is automatically classified as SPAM, promotion email, subscription email, etc.).</li>
+<li><strong>Confirm</strong>: Reply directly to the confirmation email, or click on the link in the email to reply quickly. The subject and content are arbitrary.</li>
+<li><strong>Welcome</strong>: After completing the above steps, you will receive a welcome email with the subject WELCOME to <a href=mailto:dev@kyuubi.apache.org>dev@kyuubi.apache.org</a>, and you have successfully subscribed to the Apache Kyuubi mailing list.</li>
+</ol>
+<h2 id=post-plain-text-mails>Post Plain Text Mails</h2>
+<p>When posting to the mailing lists, please use plain text emails.
+<strong>Do not use HTML emails</strong>.
+HTML emails are more likely to be targeted as spam mails and rejected.
+It may get malformed through different mail clients and not easily readable by others.</p>
 </div>
 <div class=container>
 <footer class="footer container">
