--- a/content/contributing.html
+++ b/content/contributing.html
@@ -43,6 +43,7 @@
 <li class="dropdown active">
 <a href=# class=dropdown-toggle data-toggle=dropdown role=button aria-haspopup=true aria-expanded=false>Community <span class=caret></span></a>
 <ul class=dropdown-menu>
+<li><a href=https://www.apache.org/foundation/policies/conduct>Code of Conduct</a></li>
 <li><a href=/contributing.html>Contributing to Kyuubi</a></li>
 <li><a href=/improvement-proposals.html>Improvement Proposals (KPIP)</a></li>
 <li><a href=/issue_tracking.html>Issue Tracking</a></li>
@@ -56,6 +57,7 @@
 <li><a href=/version_control.html>Version Control</a></li>
 </ul>
 </li>
+<li><a href=https://github.com/apache/incubator-kyuubi>Github</a></li>
 <li class=dropdown>
 <a href=# class=dropdown-toggle data-toggle=dropdown role=button aria-haspopup=true aria-expanded=false>ASF <span class=caret></span></a>
 <ul class=dropdown-menu>
