deploy: 2546eca86e85257d3f3d87b74e2df462d59a3cc7

--- a/content/index.html
+++ b/content/index.html
@@ -47,7 +47,7 @@
 <li><a href=https://www.apache.org/foundation/policies/conduct>Code of Conduct</a></li>
 <li><a href=/contributing.html>Contributing to Kyuubi</a></li>
 <li><a href=/improvement-proposals.html>Improvement Proposals (KPIP)</a></li>
-<li><a href=/issue_tracking.html>Issue Tracking</a></li>
+<li><a href=/issue_tracking.html>Issue Tracker</a></li>
 <li><a href=/mailing_lists.html>Mailing Lists</a></li>
 </ul>
 </li>
