--- a/content/issue_tracking.html
+++ b/content/issue_tracking.html
@@ -46,7 +46,7 @@
 <li><a href=https://www.apache.org/foundation/policies/conduct>Code of Conduct</a></li>
 <li><a href=/contributing.html>Contributing to Kyuubi</a></li>
 <li><a href=/improvement-proposals.html>Improvement Proposals (KPIP)</a></li>
-<li><a href=/issue_tracking.html>Issue Tracking</a></li>
+<li><a href=/issue_tracking.html>Issue Tracker</a></li>
 <li><a href=/mailing_lists.html>Mailing Lists</a></li>
 </ul>
 </li>
@@ -79,9 +79,35 @@
 </div>
 </nav>
 <div class=container>
-<h1>Kyuubi Issue Tracking</h1>
-<p>The project tracks bugs and new features on <a href=https://github.com/apache/incubator-kyuubi/issues>github issues</a>.</p>
-<p>If you&rsquo;d like, you can also subscribe to <a href=mailto:commits@kyuubi.apache.org>commits@kyuubi.apache.org</a> to get emails about commits.</p>
+<h1>Issue Tracker</h1>
+<p>The Kyuubi community uses <a href=https://github.com/apache/incubator-kyuubi/issues>Github Issues</a> to track various ideas, work, bugs, etc.
+The Github issues tracker integrated with our development <a href=https://github.com/apache/incubator-kyuubi>repository</a> makes it easier to organize work, focus on essential tasks, and keep plans up to date simultaneously.</p>
+<p>Although everyone can create an issue that might include any content as long as you have a Github account and we do not make any mandatory restrictions on the functionality of this section, all communication is subject to the ASF <a href=https://www.apache.org/foundation/policies/conduct>Code of Conduct</a>.
+If you observe behavior that violates those rules, please follow the <a href=https://www.apache.org/foundation/policies/conduct#reporting-guidelines>ASF reporting guidelines</a>.</p>
+<h2 id=how-to-use-github-issues>How to Use Github Issues</h2>
+<p>This section does not include any specific function of Github issues itself which can be quickly learned from the docs of Github.</p>
+<h3 id=first-good-issue>First Good Issue</h3>
+<p>An issue with the label <code>good first issue</code> is an excellent way for first-time contributors to start with Kyuubi.
+You can get a complete list <a href="https://github.com/apache/incubator-kyuubi/issues?q=is%3Aopen+is%3Aissue+label%3A%22good+first+issue%22">here</a>.</p>
+<h3 id=report-bug>Report Bug</h3>
+<p>It doesn&rsquo;t really matter whether what you are reporting is a bug or not. Just feel free to share the problem you have encountered with the community.
+For best practices, if it is indeed a bug, please try to provide the reproducible steps.
+It’s beneficial if the bug report has a description of how the bug was introduced, by which commit or version, so that reviewers can easily understand the bug.</p>
+<p>Try our <a href="https://github.com/apache/incubator-kyuubi/issues/new?assignees=&labels=bug&template=bug-report.yml&title=%5BBug%5D+">bug issue template form</a> and fill as much information as you can provide.</p>
+<h3 id=submit-ideas-or-feature-requests>Submit Ideas or Feature Requests</h3>
+<p>As a volunteer-driven project, ideas are always welcome ;)</p>
+<p>Try our <a href="https://github.com/apache/incubator-kyuubi/issues/new?assignees=&labels=feature&template=feature-request.yml&title=%5BFEATURE%5D+">feature template form</a> and make your proposal clear for others to understand.</p>
+<ul>
+<li>Explain in detail how it would work.</li>
+<li>Keep the scope as narrow as possible to make it easier to implement.</li>
+</ul>
+<p>For large features or major changes to the codebase, you may need to create a <a href=https://kyuubi.apache.org/improvement-proposals.html>Kyuubi Project Improvement Proposal</a>.</p>
+<h3 id=fix-bugs>Fix Bugs</h3>
+<p>Issues tagged with <code>bug</code> are open to whoever wants to fix them.</p>
+<h3 id=implement-features>Implement Features</h3>
+<p>Issues tagged with <code>feature</code> are open to whoever wants to implement them.</p>
+<h3 id=ask-questions>Ask Questions</h3>
+<p>For general questions, please use <a href=https://kyuubi.apache.org/mailing_lists.html>Mailing Lists</a> first, from where you get much more attention.</p>
 </div>
 <div class=container>
 <footer class="footer container">
