deploy: 6fe955d3a091d9ec3028ec48b5e54f9142ccae98

--- a/content/index.html
+++ b/content/index.html
@@ -197,7 +197,7 @@ Apache Kyuubi (Incubating), a distributed and multi-tenant gateway to provide se
 <div class=listContainer>
 <div class=kfItem>
 <img class=kfItemImg src=/homePageImg/kf1.png>
-<p class=itemTitle>Multi tenancy</p>
+<p class=itemTitle>Multi Tenancy</p>
 <p class=itemDesc>Kyuubi provides end-to-end multi-tenancy for resource acquiring and data/metadata access with a unified authentication/authorization layer.</p>
 </div>
 <div class=kfItem>
@@ -227,12 +227,12 @@ Apache Kyuubi (Incubating), a distributed and multi-tenant gateway to provide se
 <span class=ecoItemBtn></span>
 </div>
 <div class=ecoItemBody>
-<img src=/homePageImg/ecosA1.png/>
-<img src=/homePageImg/ecosA2.png/>
-<img src=/homePageImg/ecosA3.png/>
-<img src=/homePageImg/ecosA4.png/>
-<img src=/homePageImg/ecosA5.png/>
-<img src=/homePageImg/ecosA6.png/>
+<img src=/homePageImg/ecosA1.png>
+<img src=/homePageImg/ecosA2.png>
+<img src=/homePageImg/ecosA3.png>
+<img src=/homePageImg/ecosA4.png>
+<img src=/homePageImg/ecosA5.png>
+<img src=/homePageImg/ecosA6.png>
 </div>
 </div>
 <div class=ecoItem>
@@ -241,10 +241,10 @@ Apache Kyuubi (Incubating), a distributed and multi-tenant gateway to provide se
 <span class=ecoItemBtn></span>
 </div>
 <div class=ecoItemBody>
-<img src=/homePageImg/ecosB1.png/>
-<img src=/homePageImg/ecosB2.png/>
-<img src=/homePageImg/ecosB3.png/>
-<img src=/homePageImg/ecosB4.png/>
+<img src=/homePageImg/ecosB1.png>
+<img src=/homePageImg/ecosB2.png>
+<img src=/homePageImg/ecosB3.png>
+<img src=/homePageImg/ecosB4.png>
 </div>
 </div>
 <div class=ecoItem>
@@ -253,12 +253,12 @@ Apache Kyuubi (Incubating), a distributed and multi-tenant gateway to provide se
 <span class=ecoItemBtn></span>
 </div>
 <div class=ecoItemBody>
-<img src=/homePageImg/ecosC1.png/>
-<img src=/homePageImg/ecosC2.png/>
-<img src=/homePageImg/ecosC3.png/>
-<img src=/homePageImg/ecosC4.png/>
-<img src=/homePageImg/ecosC5.png/>
-<img src=/homePageImg/ecosC6.png/>
+<img src=/homePageImg/ecosC1.png>
+<img src=/homePageImg/ecosC2.png>
+<img src=/homePageImg/ecosC3.png>
+<img src=/homePageImg/ecosC4.png>
+<img src=/homePageImg/ecosC5.png>
+<img src=/homePageImg/ecosC6.png>
 </div>
 </div>
 </div>
@@ -267,7 +267,7 @@ Apache Kyuubi (Incubating), a distributed and multi-tenant gateway to provide se
 <div>
 <div class=contentBlock>
 <div class=blockTitle>
-<span>Use cases</span>
+<span>Use Cases</span>
 <div class=blockTitleLine></div>
 </div>
 <div class=useCaseListContainer>
@@ -295,17 +295,17 @@ Apache Kyuubi (Incubating), a distributed and multi-tenant gateway to provide se
 <div class=listContainer>
 <a class=communityItem href=https://kyuubi.apache.org/mailing_lists.html>
 <img class=communityItemImg src=/homePageImg/community1.png>
-<p class=communityItemTitle>Mailing list</p>
+<p class=communityItemTitle>Mailing List</p>
 <span class=communityLine></span>
 </a>
 <a class=communityItem href=https://github.com/apache/incubator-kyuubi>
 <img class=communityItemImg src=/homePageImg/community2.png>
-<p class=communityItemTitle>Source code</p>
+<p class=communityItemTitle>Source Code</p>
 <span class=communityLine></span>
 </a>
 <a class=communityItem href=https://kyuubi.apache.org/contributing.html>
 <img class=communityItemImg src=/homePageImg/community3.png>
-<p class=communityItemTitle>How to contribute</p>
+<p class=communityItemTitle>How to Contribute</p>
 <span class=communityLine></span>
 </a>
 </div>
