deploy: 4b962ec54159be7c56af4616ab8725113c3538f8

--- a/content/index.html
+++ b/content/index.html
@@ -203,7 +203,7 @@ Apache Kyuubi (Incubating), a distributed and multi-tenant gateway to provide se
 <div class=kfItem>
 <img class=kfItemImg src=/homePageImg/kf2.png>
 <p class=itemTitle>High Availability</p>
-<p class=itemDesc>Kyuubi supports a load balancing on ZooKeeper, which provides an enterprise-grade high availability, as well as an unlimited high client concurrency.</p>
+<p class=itemDesc>Kyuubi supports load balancing via ZooKeeper, which provides an enterprise-grade high availability, as well as an unlimited high client concurrency.</p>
 </div>
 <div class=kfItem>
 <img class=kfItemImg src=/homePageImg/kf3.png>
