--- a/content/mailing_lists.html
+++ b/content/mailing_lists.html
@@ -173,6 +173,7 @@ Apache Software Foundation
 <script>var phoneBtn=document.getElementById('phoneBtn'),mask=document.getElementById('nav_mask'),header_mobile,header;phoneBtn.addEventListener('click',function(b){var a=mask.style.display!=='none';phoneBtn.className=a?'phoneBtn':'phoneBtn closeBtn',mask.style.display=a?'none':' block'}),mask.addEventListener('click',function(a){phoneBtn.className='phoneBtn',mask.style.display='none'}),header_mobile=document.getElementById('header_mobile'),header_mobile.addEventListener('click',function(a){var c=a.target.className,b,d;c==="navLink navLinkWithChild"&&(b=a.target.parentNode,d=b.className!=='navItem',b.className=d?'navItem':'navItem openNavItem')}),header=document.getElementById('header'),window.onscroll=function(){var a=document.documentElement.scrollLeft||document.body.scrollLeft;header.style.left=-a+'px'}</script>
 <div class=container>
 <h1>Kyuubi Mailing Lists</h1>
+<p><img src=https://svn.apache.org/repos/asf/comdev/project-logos/originals/kyuubi-1.svg alt="Kyuubi logo" width=30% align=right></p>
 <p>The Kyuubi developer mailing list is the preferred means for all your questions when using Kyuubi, which pushes your doubts out to the entire community.
 This is the best way to keep up-to-date with the community.</p>
 <p>Before you post anything to the mailing lists, be sure that you already <strong>subscribe</strong> to them.
@@ -195,7 +196,7 @@ The currently available lists are listed in the below table.</p>
 <td><a href=mailto:dev-subscribe@kyuubi.apache.org>subscribe</a></td>
 <td><a href=mailto:dev-unsubscribe@kyuubi.apache.org>unsubscribe</a></td>
 <td><a href=https://lists.apache.org/list.html?dev@kyuubi.apache.org>archive</a></td>
-<td><ul><li>Use this list for your Kyuubi questions</li><li>Used by Kyuubi contributors to discuss development of Kyuubi</li><li>Sync discussions happen on Github Issues</li></ul></td>
+<td><ul><li>Use this list for your Kyuubi questions</li><li>Used by Kyuubi contributors to discuss development of Kyuubi</li></ul></td>
 </tr>
 <tr>
 <td><strong>Commits List</strong></td>
@@ -204,6 +205,14 @@ The currently available lists are listed in the below table.</p>
 <td><a href=mailto:commits-unsubscribe@kyuubi.apache.org>unsubscribe</a></td>
 <td><a href=https://lists.apache.org/list.html?commits@kyuubi.apache.org>archive</a></td>
 <td><ul><li>Notifications on changes to the Kyuubi codebase</li></ul></td>
+</tr>
+<tr>
+<td><strong>Notifications List</strong></td>
+<td><a href=mailto:notifications@kyuubi.apache.org>notifications@kyuubi.apache.org</a></td>
+<td><a href=mailto:notifications-subscribe@kyuubi.apache.org>subscribe</a></td>
+<td><a href=mailto:notifications-unsubscribe@kyuubi.apache.org>unsubscribe</a></td>
+<td><a href=https://lists.apache.org/list.html?notifications@kyuubi.apache.org>archive</a></td>
+<td><ul><li>Sync discussions happen on Github Issues and Pull requests</li></ul></td>
 </tr>
 </tbody>
 </table>
