--- a/content/pull_request.html
+++ b/content/pull_request.html
@@ -45,10 +45,10 @@ Community
 <div class=childNavContainer>
 <ul class=childNav>
 <li><a class=childNavLink href=https://www.apache.org/foundation/policies/conduct>Code of Conduct</a></li>
-<li><a class=childNavLink href=/contributing.html>Contributing to Kyuubi</a></li>
 <li><a class=childNavLink href=/improvement-proposals.html>Improvement Proposals (KPIP)</a></li>
 <li><a class=childNavLink href=/issue_tracking.html>Issue Tracker</a></li>
 <li><a class=childNavLink href=/mailing_lists.html>Mailing Lists</a></li>
+<li><a class=childNavLink href=/pull_request.html>Pull Request</a></li>
 </ul>
 </div>
 </li>
@@ -125,10 +125,10 @@ Community
 <div class=childNavContainer>
 <ul class=childNav>
 <li><a class=childNavLink href=https://www.apache.org/foundation/policies/conduct>Code of Conduct</a></li>
-<li><a class=childNavLink href=/contributing.html>Contributing to Kyuubi</a></li>
 <li><a class=childNavLink href=/improvement-proposals.html>Improvement Proposals (KPIP)</a></li>
 <li><a class=childNavLink href=/issue_tracking.html>Issue Tracker</a></li>
 <li><a class=childNavLink href=/mailing_lists.html>Mailing Lists</a></li>
+<li><a class=childNavLink href=/pull_request.html>Pull Request</a></li>
 </ul>
 </div>
 </li>
@@ -173,62 +173,45 @@ Apache Software Foundation
 <script>var phoneBtn=document.getElementById('phoneBtn'),mask=document.getElementById('nav_mask'),header_mobile,header;phoneBtn.addEventListener('click',function(b){var a=mask.style.display!=='none';phoneBtn.className=a?'phoneBtn':'phoneBtn closeBtn',mask.style.display=a?'none':' block'}),mask.addEventListener('click',function(a){phoneBtn.className='phoneBtn',mask.style.display='none'}),header_mobile=document.getElementById('header_mobile'),header_mobile.addEventListener('click',function(a){var c=a.target.className,b,d;c==="navLink navLinkWithChild"&&(b=a.target.parentNode,d=b.className!=='navItem',b.className=d?'navItem':'navItem openNavItem')}),header=document.getElementById('header'),window.onscroll=function(){var a=document.documentElement.scrollLeft||document.body.scrollLeft;header.style.left=-a+'px'}</script>
 <div class=container>
 <h1>Contributing</h1>
-<p>Contributing to Kyuubi including source code, documents, tests e.t.c. means that you agree to the Apache License v2.0.</p>
-<ul>
-<li>Better to search the issue history first before reporting an <a class=github-button href=https://github.com/apache/incubator-kyuubi/issues data-color-scheme="no-preference: light; light: dark; dark: light;" data-icon=octicon-issue-opened data-show-count=true aria-label="Issue apache/incubator-kyuubi on GitHub">Issue</a></li>
-<li>Better to create an <a class=github-button href=https://github.com/apache/incubator-kyuubi/issues data-color-scheme="no-preference: light; light: dark; dark: light;" data-icon=octicon-issue-opened data-show-count=true aria-label="Issue apache/incubator-kyuubi on GitHub">Issue</a> to describe the feature or bug first before make a pull request.</li>
-<li>Better to use English for world widely understanding.</li>
-<li>Ask us anything</li>
-</ul>
-<p>Before you start, please read the <a href=http://www.apache.org/foundation/policies/conduct.html>Code of Conduct</a> carefully, familiarize yourself with it and refer to it whenever you need it.</p>
-<h2 id=prepare-github-environment>Prepare github environment</h2>
-<p>If you are new to submit a Pull Request, the follow steps are helpful to you.</p>
-<ol>
-<li>An available <a href=https://git-scm.com/downloads>git</a>, you can run <code>git version</code> if you not sure you have</li>
-<li>Fork <a href=https://github.com/apache/incubator-kyuubi>Kyuubi</a> on github, now you have a cloned Kyuubi repo</li>
-<li>Clone your Kyuubi repo with cmd <code>git clone https://github.com/${yourname}/kyuubi.git</code></li>
-<li>Create a new branch with cmd <code>git checkout -b test-branch</code></li>
-<li>Modify the code you want</li>
-<li>Commit and push code to your Kyuubi repo with commd <code>git commit -am "comment"; git push test-branch test-branch</code></li>
-<li>Back to <a href=https://github.com/apache/incubator-kyuubi>Kyuubi</a>, you can see a banner about <code>new pull request</code></li>
-<li>Now we can create a pull request to Kyuubi</li>
-</ol>
-<h2 id=creating-a-pull-request>Creating a Pull Request</h2>
-<p>When creating a Pull Request, you will automatically get the template below.</p>
-<p>Fulfilling it thoroughly can improve the speed of the review process.</p>
-<pre><code>&lt;!--
-Thanks for sending a pull request!
-
-Here are some tips for you:
-  1. If this is your first time, please read our contributor guidelines:
-     https://kyuubi.readthedocs.io/en/latest/community/contributions.html
---&gt;
-
-### _Which issue are you going to fix?_
-&lt;!--
-Replace ${ID} below with the actual issue id from
-https://github.com/apache/incubator-kyuubi/issues,
-so that the issue will be linked and automatically closed after merging
---&gt;
-
-Fixes #${ID}
-
-### _Why are the changes needed?_
-&lt;!--
-Please clarify why the changes are needed. For instance,
-  1. If you add a feature, you can talk about the user case of it.
-  2. If you fix a bug, you can clarify why it is a bug.
---&gt;
-
-
-### _How was this patch tested?_
-- [ ] Add some test cases that check the changes thoroughly including negative and positive cases if possible
-
-- [ ] Add screenshots for manual tests if appropriate
-
-- [ ] [Run test](https://kyuubi.readthedocs.io/en/latest/tools/testing.html#running-tests) locally before make a pull request
-
-</code></pre>
+<h1 id=review-pull-requests>Review pull requests</h1>
+<p>Kyuubi encourage to help review pull requests of other developers which makes code more robust.
+The review guide can see <a href=https://google.github.io/eng-practices/review/>Google’s Engineering Practices documentation</a>.</p>
+<h1 id=submit-your-pull-requests>Submit your pull requests</h1>
+<h2 id=before>Before</h2>
+<p>Before proceeding, it&rsquo;s better to search the issues and pull requests history first. Likely, the problem or request has been discussed.</p>
+<p>After checking, you can create a new issue to describe what want to do, and about issues, we have rich types to
+choose, see <a href=https://github.com/apache/incubator-kyuubi/issues/new/choose>here</a>.</p>
+<p>Then submit your code within a pull request. If you are a new contributor, please follow this guide to get a gentle step-by-step
+introductionto setting up the development environment and making your first contribution.</p>
+<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-shell data-lang=shell><span style=color:#75715e># 1. Fork the repository on GitHub</span>
+<span style=color:#75715e>#    Go to &#39;https://github.com/apache/incubator-kyuubi&#39; and click the &#39;Fork&#39; button to your repository</span>
+<span style=color:#75715e># 2. Clone the repository locally using follow git cmd</span>
+     git clone https://github.com/<span style=color:#e6db74>${</span>Github_user<span style=color:#e6db74>}</span>/incubator-kyuubi.git
+     cd incubator-kyuubi
+<span style=color:#75715e># 3. Add git remmote repository</span>
+     git remote add origin https://github.com/<span style=color:#e6db74>${</span>Github_user<span style=color:#e6db74>}</span>/incubator-kyuubi.git
+     git remote add apache https://github.com/apache/incubator-kyuubi.git
+<span style=color:#75715e># 4. Set up your identifier</span>
+     git config user.name <span style=color:#e6db74>&#34;</span><span style=color:#e6db74>${</span>Your_github_name<span style=color:#e6db74>}</span><span style=color:#e6db74>&#34;</span>
+     git config user.email <span style=color:#e6db74>&#34;</span><span style=color:#e6db74>${</span>Your_public_email<span style=color:#e6db74>}</span><span style=color:#e6db74>&#34;</span>
+<span style=color:#75715e># 5. Create a new branch</span>
+     git checkout -b <span style=color:#e6db74>${</span>Your_branch_name<span style=color:#e6db74>}</span>
+<span style=color:#75715e># 6. Do your develop and commit the changes</span>
+     git commit -am <span style=color:#e6db74>&#34;</span><span style=color:#e6db74>${</span>Your_commit_information<span style=color:#e6db74>}</span><span style=color:#e6db74>&#34;</span>
+<span style=color:#75715e># 7. Push your branch to your repository</span>
+     git push origin <span style=color:#e6db74>${</span>Your_branch_name<span style=color:#e6db74>}</span>
+<span style=color:#75715e># 8. Go to &#39;https://github.com/apache/incubator-kyuubi&#39; and click the &#39;new pull request&#39; button</span>
+</code></pre></div><p>It is highly recommended providing a clear descriptions for a better code review process.
+Writing good pull request descriptions is a great way to help reviewers know what to expect when reviewing code.
+As developers, our responsibility is to fix issues or implement new features and clearly communicate the development work to reviewers.
+A developer can convey proposed code changes and their purposes either through detailed PR descriptions.
+They&rsquo;re also a great way to help track things that should be done for every change, such as testing, adding unit tests, and updating documentation in the git log.
+See <a href=https://github.com/apache/incubator-kyuubi/blob/master/.github/PULL_REQUEST_TEMPLATE>Pull Request Template</a>.</p>
+<h2 id=after>After</h2>
+<p>It may take some time to wait other developer to review. Feel free to ping any committer who has worked on the similar area.
+In general, You can find out the right people to review your code through git commit history.</p>
+<p>One more thing, Kyuubi leverage github action to cover unit test and integration test, so please make sure your pull request&rsquo;s
+tests are green. It will Speed up the merging :).</p>
 </div>
 <footer class=footer>
 <div class=footerBox>
