--- a/content/become_committer.html
+++ b/content/become_committer.html
@@ -174,9 +174,64 @@ Apache Software Foundation
 </nav>
 <script>var phoneBtn=document.getElementById('phoneBtn'),mask=document.getElementById('nav_mask'),header_mobile,header;phoneBtn.addEventListener('click',function(b){var a=mask.style.display!=='none';phoneBtn.className=a?'phoneBtn':'phoneBtn closeBtn',mask.style.display=a?'none':' block'}),mask.addEventListener('click',function(a){phoneBtn.className='phoneBtn',mask.style.display='none'}),header_mobile=document.getElementById('header_mobile'),header_mobile.addEventListener('click',function(a){var c=a.target.className,b,d;c==="navLink navLinkWithChild"&&(b=a.target.parentNode,d=b.className!=='navItem',b.className=d?'navItem':'navItem openNavItem')}),header=document.getElementById('header'),window.onscroll=function(){var a=document.documentElement.scrollLeft||document.body.scrollLeft;header.style.left=-a+'px'}</script>
 <div class=container>
-<h1>The Kyuubi Ecosystem (present and future)</h1>
-<p>The figure below shows our vision for the Kyuubi Ecosystem. Some of them have been realized, some in development, and others would not be possible without your help.</p>
-<img src=kyuubi_ecosystem.png title="kyuubi ecosystem" width=100% height=auto>
+<h1>Become A Committer of Apache Kyuubi</h1>
+<p><img src=https://svn.apache.org/repos/asf/comdev/project-logos/originals/kyuubi-1.svg alt="Kyuubi logo" width=30% align=right></p>
+<p>Anyone being supportive of the community and working in any of the
+CoPDoC areas can become an Apache Kyuubi committer. The CoPDoC is an
+acronym from ASF to describe how we recognize your contributions not
+only by code.</p>
+<ul>
+<li><strong>Co</strong>mmunity - You can join us via our mailing list, issue
+trackers, discussions page to interact with community members, and
+share vision and knowledge</li>
+<li><strong>P</strong>roject - a clear vision and consensus are needed</li>
+<li><strong>Do</strong>cumentation - without it, the stuff remains only in the minds
+of the authors</li>
+<li><strong>C</strong>ode - discussion goes nowhere without code</li>
+</ul>
+<p>Apache Kyuubi community strives to be meritocratic. Thus, once someone
+has contributed sufficiently to any area of CoPDoC they can be a
+candidate for committer-ship and at last voted in as a Kyuubi
+committer. Being an Apache Kyuubi committer does not necessarily mean
+you must commit code with your commit privilege to the codebase; it
+means you are committed to the Kyuubi project and are productively
+contributing to our community&rsquo;s success.</p>
+<h2 id=committer-requirements>Committer requirements:</h2>
+<p>There are no strict rules for becoming a committer or PPMC member.
+Candidates for new committers are typically people that are active
+contributors and community members. Anyway, if the rules can be
+clarified a little bit, it can somehow clear the doubts in the minds
+of contributors and make the community more transparent, reasonable,
+and fair.</p>
+<h3 id=continuous-contributions>Continuous contributions</h3>
+<p>Committer candidates should have a decent amount of continuous
+engagements and contributions (fixing bugs, adding new features,
+writing documentation, maintaining issues boards, code review, or answering
+community questions) to Kyuubi either by contributing to the codebase
+of the main website or Kyuubi&rsquo;s GitHub repositories.</p>
+<ul>
+<li>+3 months with light activity and engagement.</li>
+<li>+2 months of medium activity and engagement.</li>
+<li>+1 month with solid activity and engagement.</li>
+</ul>
+<h3 id=quality-of-contributions>Quality of contributions</h3>
+<ul>
+<li>A solid general understanding of the project</li>
+<li>Well tested, well-designed, following Apache Kyuubi coding
+standards, and simple patches.</li>
+<li>Well-organized and detailed user-oriented documentation.</li>
+</ul>
+<h3 id=community-involvement>Community involvement</h3>
+<ul>
+<li>Be active, courteous, and respectful on the dev mailing list and
+help mentor newer contributors
+and users.</li>
+<li>Be active, courteous, and respectful on the issue tracker for
+project maintenance</li>
+<li>Be active, courteous, and respectful for pull requests reviewing</li>
+<li>Be involved in the design road map discussions with a professional
+and diplomatic approach even if there is a disagreement</li>
+</ul>
 </div>
 <footer class=footer>
 <div class=footerBox>
