--- a/content/index.html
+++ b/content/index.html
@@ -46,10 +46,9 @@ Community
 <div class=childNavContainer>
 <ul class=childNav>
 <li><a class=childNavLink href=https://www.apache.org/foundation/policies/conduct>Code of Conduct</a></li>
+<li><a class=childNavLink href=/become_committer.html>Become A Committer</a></li>
 <li><a class=childNavLink href=/improvement-proposals.html>Improvement Proposals (KPIP)</a></li>
-<li><a class=childNavLink href=/issue_tracking.html>Issue Tracker</a></li>
-<li><a class=childNavLink href=/mailing_lists.html>Mailing Lists</a></li>
-<li><a class=childNavLink href=/pull_request.html>Pull Request</a></li>
+<li><a class=childNavLink href=/mailing_lists.html>Join the Mailing Lists</a></li>
 </ul>
 </div>
 </li>
@@ -60,6 +59,8 @@ Development
 </a>
 <div class=childNavContainer>
 <ul class=childNav>
+<li><a class=childNavLink href=/issue_tracking.html>Issue Tracker</a></li>
+<li><a class=childNavLink href=/pull_request.html>Pull Request</a></li>
 <li><a class=childNavLink href=/developer-tools.html>Useful Developer Tools</a></li>
 <li><a class=childNavLink href=/version_control.html>Version Control</a></li>
 </ul>
@@ -126,10 +127,9 @@ Community
 <div class=childNavContainer>
 <ul class=childNav>
 <li><a class=childNavLink href=https://www.apache.org/foundation/policies/conduct>Code of Conduct</a></li>
+<li><a class=childNavLink href=/become_committer.html>Become A Committer</a></li>
 <li><a class=childNavLink href=/improvement-proposals.html>Improvement Proposals (KPIP)</a></li>
-<li><a class=childNavLink href=/issue_tracking.html>Issue Tracker</a></li>
-<li><a class=childNavLink href=/mailing_lists.html>Mailing Lists</a></li>
-<li><a class=childNavLink href=/pull_request.html>Pull Request</a></li>
+<li><a class=childNavLink href=/mailing_lists.html>Join the Mailing Lists</a></li>
 </ul>
 </div>
 </li>
@@ -140,6 +140,8 @@ Development
 </a>
 <div class=childNavContainer>
 <ul class=childNav>
+<li><a class=childNavLink href=/issue_tracking.html>Issue Tracker</a></li>
+<li><a class=childNavLink href=/pull_request.html>Pull Request</a></li>
 <li><a class=childNavLink href=/developer-tools.html>Useful Developer Tools</a></li>
 <li><a class=childNavLink href=/version_control.html>Version Control</a></li>
 </ul>
