--- a/content/index.html
+++ b/content/index.html
@@ -49,6 +49,7 @@ Community
 <li><a class=childNavLink href=/become_committer.html>Become A Committer</a></li>
 <li><a class=childNavLink href=/improvement-proposals.html>Improvement Proposals (KPIP)</a></li>
 <li><a class=childNavLink href=/mailing_lists.html>Join the Mailing Lists</a></li>
+<li><a class=childNavLink href=/new_committer_process.html>New Committer Process</a></li>
 </ul>
 </div>
 </li>
@@ -130,6 +131,7 @@ Community
 <li><a class=childNavLink href=/become_committer.html>Become A Committer</a></li>
 <li><a class=childNavLink href=/improvement-proposals.html>Improvement Proposals (KPIP)</a></li>
 <li><a class=childNavLink href=/mailing_lists.html>Join the Mailing Lists</a></li>
+<li><a class=childNavLink href=/new_committer_process.html>New Committer Process</a></li>
 </ul>
 </div>
 </li>
