--- a/content/new_committer_process.html
+++ b/content/new_committer_process.html
@@ -176,9 +176,202 @@ Apache Software Foundation
 </nav>
 <script>var phoneBtn=document.getElementById('phoneBtn'),mask=document.getElementById('nav_mask'),header_mobile,header;phoneBtn.addEventListener('click',function(b){var a=mask.style.display!=='none';phoneBtn.className=a?'phoneBtn':'phoneBtn closeBtn',mask.style.display=a?'none':' block'}),mask.addEventListener('click',function(a){phoneBtn.className='phoneBtn',mask.style.display='none'}),header_mobile=document.getElementById('header_mobile'),header_mobile.addEventListener('click',function(a){var c=a.target.className,b,d;c==="navLink navLinkWithChild"&&(b=a.target.parentNode,d=b.className!=='navItem',b.className=d?'navItem':'navItem openNavItem')}),header=document.getElementById('header'),window.onscroll=function(){var a=document.documentElement.scrollLeft||document.body.scrollLeft;header.style.left=-a+'px'}</script>
 <div class=container>
-<h1>Description</h1>
-<p><img src=kyuubi_logo.png title=kyuubi-logo width=200px>Apache Kyuubi (Incubating)</p>
-<p>Kyuubi is a distributed multi-tenant Thrift JDBC/ODBC server for large-scale data management, processing, and analytics, built on top of Apache Spark and designed to support more engines (i.e., Flink).</p>
+<h1>New Committer Process</h1>
+<p><img src=https://svn.apache.org/repos/asf/comdev/project-logos/originals/kyuubi-1.svg alt="Kyuubi logo" width=30% align=right></p>
+<p>This guideline is based on <a href=https://community.apache.org/newcommitter.html#new-committer-process>apache newcommitter</a></p>
+<ul>
+<li><a href=#the-process-of-new-committer>The process of new Committer</a>
+<ul>
+<li><a href=#call-a-vote-in-mailing-privatekyuubiapacheorg>Call a vote in mailing <code>private@kyuubi.apache.org</code></a></li>
+<li><a href=#close-the-vote>Close the vote</a></li>
+<li><a href=#if-the-result-is-positive-invite-the-new-committer>If the result is positive, invite the new committer</a></li>
+<li><a href=#if-accept-then-accept-the-committer>If accept, then: Accept the committer</a></li>
+<li><a href=#wait-until-we-see-that-receipt-of-cla-is-recorded>Wait until we see that receipt of CLA is recorded</a></li>
+<li><a href=#request-creation-of-the-committer-account>Request creation of the committer account</a></li>
+<li><a href=#notify-the-committer-of-completion>Notify the committer of completion</a></li>
+</ul>
+</li>
+<li><a href=#template>Template</a>
+<ul>
+<li><a href=#committer-vote-template>Committer Vote Template</a></li>
+<li><a href=#close-vote-template>Close Vote Template</a></li>
+<li><a href=#committer-invite-template>Committer Invite Template</a></li>
+<li><a href=#committer-accept-template>Committer Accept Template</a></li>
+<li><a href=#committer-done-template>Committer Done Template</a></li>
+</ul>
+</li>
+</ul>
+<h2 id=the-process-of-new-committer>The process of new Committer</h2>
+<h3 id=call-a-vote-in-mailing-privatekyuubiapacheorg>Call a vote in mailing <code>private@kyuubi.apache.org</code></h3>
+<p>see <strong>Committer Vote Template</strong></p>
+<h3 id=close-the-vote>Close the vote</h3>
+<p>see <strong>Close Vote Template</strong></p>
+<h3 id=if-the-result-is-positive-invite-the-new-committer>If the result is positive, invite the new committer</h3>
+<p>see <strong>Committer Invite Template</strong></p>
+<h3 id=if-accept-then-accept-the-committer>If accept, then: Accept the committer</h3>
+<p>see <strong>Committer Accept Template</strong></p>
+<h3 id=wait-until-we-see-that-receipt-of-cla-is-recorded>Wait until we see that receipt of CLA is recorded</h3>
+<h3 id=request-creation-of-the-committer-account>Request creation of the committer account</h3>
+<p>see <strong>Committer Account Creation</strong></p>
+<ul>
+<li>Wait until root says it is done</li>
+<li>PMC Chair enables svn and other access</li>
+<li>Add committer to the appropriate groups in JIRA and CWiki</li>
+</ul>
+<h3 id=notify-the-committer-of-completion>Notify the committer of completion</h3>
+<p>see <strong>Committer Done Template</strong></p>
+<h2 id=template>Template</h2>
+<p>Note that, there are three placeholder in template should be replaced before using</p>
+<ul>
+<li>NEW_COMMITTER_NAME</li>
+<li>NEW_COMMITTER_EMAIL</li>
+<li>NEW_COMMITTER_APACHE_NAME</li>
+</ul>
+<h3 id=committer-vote-template>Committer Vote Template</h3>
+<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-text data-lang=text>To: private@kyuubi.apache.org
+Subject: [VOTE] New committer: ${NEW_COMMITTER_NAME}
+</code></pre></div><div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-text data-lang=text>Hi Kyuubi PPMC,
+
+This is a formal vote about inviting ${NEW_COMMITTER_NAME} as our new committer.
+
+${Work list}[1]
+
+[1] https://github.com/apache/incubator-kyuubi/commits?author=${NEW_COMMITTER_NAME}
+</code></pre></div><p>Note that, Voting ends one week from today, i.e. <a href="https://www.timeanddate.com/counters/customcounter.html?year=YYYY&month=MM&day=DD">midnight UTC on YYYY-MM-DD</a>
+See voting <a href=https://community.apache.org/newcommitter.html>guidelines</a></p>
+<h3 id=close-vote-template>Close Vote Template</h3>
+<pre><code class=language-test data-lang=test>To: private@kyuubi.apache.org
+Subject: [RESULT] [VOTE] New committer: ${NEW_COMMITTER_NAME}
+</code></pre><div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-text data-lang=text>Hi Kyuubi PPMC,
+
+The vote has now closed. The results are:
+
+Binding Votes:
+
++1 [TOTAL BINDING +1 VOTES]
+ 0 [TOTAL BINDING +0/-0 VOTES]
+-1 [TOTAL BINDING -1 VOTES]
+
+The vote is ***successful/not successful***
+</code></pre></div><h3 id=committer-invite-template>Committer Invite Template</h3>
+<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-text data-lang=text>To: ${NEW_COMMITTER_EMAIL}
+Cc: private@kyuubi.apache.org
+Subject: Invitation to become Kyuubi committer: ${NEW_COMMITTER_NAME}
+</code></pre></div><div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-text data-lang=text>Hello ${NEW_COMMITTER_NAME},
+
+The Kyuubi Project Management Committee (PMC) 
+hereby offers you committer privileges to the project.
+These privileges are offered on the understanding that
+you&#39;ll use them reasonably and with common sense.
+We like to work on trust rather than unnecessary constraints. 
+
+Being a committer enables you to more easily make 
+changes without needing to go through the patch 
+submission process.
+
+Being a committer does not require you to 
+participate any more than you already do. It does 
+tend to make one even more committed.  You will 
+probably find that you spend more time here.
+
+Of course, you can decline and instead remain as a 
+contributor, participating as you do now.
+
+A. This personal invitation is a chance for you to 
+accept or decline in private.  Either way, please 
+let us know in reply to the private@kyuubi.apache.org
+address only.
+
+B. If you accept, the next step is to register an iCLA:
+    1. Details of the iCLA and the forms are found 
+    through this link: https://www.apache.org/licenses/#clas
+
+    2. Instructions for its completion and return to 
+    the Secretary of the ASF are found at
+    https://www.apache.org/licenses/#submitting
+
+    3. When you transmit the completed iCLA, request 
+    to notify the Apache Kyuubi and choose a 
+    unique Apache ID. Look to see if your preferred 
+    ID is already taken at 
+    https://people.apache.org/committer-index.html
+    This will allow the Secretary to notify the PMC 
+    when your iCLA has been recorded.
+
+When recording of your iCLA is noted, you will 
+receive a follow-up message with the next steps for 
+establishing you as a committer.
+</code></pre></div><h3 id=committer-accept-template>Committer Accept Template</h3>
+<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-text data-lang=text>To: ${NEW_COMMITTER_EMAIL}
+Cc: private@kyuubi.apache.org
+Subject: Re: invitation to become Kyuubi committer
+</code></pre></div><div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-text data-lang=text>Welcome. Here are the next steps in becoming a project committer. After that
+we will make an announcement to the dev@kyuubi.apache.org list.
+
+You need to send a Contributor License Agreement to the ASF.
+Normally you would send an Individual CLA. If you also make
+contributions done in work time or using work resources,
+see the Corporate CLA. Ask us if you have any issues.
+https://www.apache.org/licenses/#clas.
+
+You need to choose a preferred ASF user name and alternatives.
+In order to ensure it is available you can view a list of taken IDs at
+https://people.apache.org/committer-index.html
+
+Please notify us when you have submitted the CLA and by what means 
+you did so. This will enable us to monitor its progress.
+
+We will arrange for your Apache user account when the CLA has 
+been recorded.
+
+After that is done, please make followup replies to the dev@kyuubi.apache.org list.
+We generally discuss everything there and keep the
+private@kyuubi.apache.org list for occasional matters which must be private.
+
+The developer section of the website describes roles within the ASF and provides other
+resources:
+  https://www.apache.org/foundation/how-it-works.html
+  https://www.apache.org/dev/
+
+The incubator also has some useful information for new committers
+in incubating projects:
+  https://incubator.apache.org/guides/committer.html
+  https://incubator.apache.org/guides/ppmc.html
+
+Just as before you became a committer, participation in any ASF community
+requires adherence to the ASF Code of Conduct:
+  https://www.apache.org/foundation/policies/conduct.html
+
+Yours,
+The Apache Kyuubi PPMC
+</code></pre></div><h3 id=committer-done-template>Committer Done Template</h3>
+<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-text data-lang=text>To: private@kyuubi.apache.org, ${NEW_COMMITTER_EMAIL}
+Subject: account request: ${NEW_COMMITTER_NAME}
+</code></pre></div><div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-text data-lang=text>${NEW_COMMITTER_NAME}, as you know, the ASF Infrastructure has set up your
+committer account with the username &#39;${NEW_COMMITTER_APACHE_NAME}&#39;.
+
+Please follow the instructions to set up your SSH,
+svn password, svn configuration, email forwarding, etc.
+https://www.apache.org/dev/#committers
+
+You have commit access to specific sections of the
+ASF repository, as follows:
+
+The general &#34;committers&#34; at:
+  https://svn.apache.org/repos/private/committers
+
+If you have any questions during this phase, then please
+see the following resources:
+
+Apache developer&#39;s pages: https://www.apache.org/dev/
+Incubator committer guide: https://incubator.apache.org/guides/committer.html
+
+Naturally, if you don&#39;t understand anything be sure to ask us on the dev@kyuubi.apache.org mailing list. 
+Documentation is maintained by volunteers and hence can be out-of-date and incomplete - of course
+you can now help fix that.
+
+A PPMC member will announce your election to the dev list soon.
+</code></pre></div>
 </div>
 <footer class=footer>
 <div class=footerBox>
