deploy: 3ec403c7d62c500e09f8e6ba2fd7d4b382f83fbb

--- a/content/new_committer_process.html
+++ b/content/new_committer_process.html
@@ -180,24 +180,24 @@ Apache Software Foundation
 <p><img src=https://svn.apache.org/repos/asf/comdev/project-logos/originals/kyuubi-1.svg alt="Kyuubi logo" width=30% align=right></p>
 <p>This guideline is based on <a href=https://community.apache.org/newcommitter.html#new-committer-process>apache newcommitter</a></p>
 <ul>
-<li><a href=#the-process-of-new-committer>The process of new Committer</a>
+<li><a href=new_committer_process#the-process-of-new-committer>The process of new Committer</a>
 <ul>
-<li><a href=#call-a-vote-in-mailing-privatekyuubiapacheorg>Call a vote in mailing <code>private@kyuubi.apache.org</code></a></li>
-<li><a href=#close-the-vote>Close the vote</a></li>
-<li><a href=#if-the-result-is-positive-invite-the-new-committer>If the result is positive, invite the new committer</a></li>
-<li><a href=#if-accept-then-accept-the-committer>If accept, then: Accept the committer</a></li>
-<li><a href=#wait-until-we-see-that-receipt-of-cla-is-recorded>Wait until we see that receipt of CLA is recorded</a></li>
-<li><a href=#request-creation-of-the-committer-account>Request creation of the committer account</a></li>
-<li><a href=#notify-the-committer-of-completion>Notify the committer of completion</a></li>
+<li><a href=new_committer_process#call-a-vote-in-mailing-privatekyuubiapacheorg>Call a vote in mailing <code>private@kyuubi.apache.org</code></a></li>
+<li><a href=new_committer_process#close-the-vote>Close the vote</a></li>
+<li><a href=new_committer_process#if-the-result-is-positive-invite-the-new-committer>If the result is positive, invite the new committer</a></li>
+<li><a href=new_committer_process#if-accept-then-accept-the-committer>If accept, then: Accept the committer</a></li>
+<li><a href=new_committer_process#wait-until-we-see-that-receipt-of-cla-is-recorded>Wait until we see that receipt of CLA is recorded</a></li>
+<li><a href=new_committer_process#request-creation-of-the-committer-account>Request creation of the committer account</a></li>
+<li><a href=new_committer_process#notify-the-committer-of-completion>Notify the committer of completion</a></li>
 </ul>
 </li>
-<li><a href=#template>Template</a>
+<li><a href=new_committer_process#template>Template</a>
 <ul>
-<li><a href=#committer-vote-template>Committer Vote Template</a></li>
-<li><a href=#close-vote-template>Close Vote Template</a></li>
-<li><a href=#committer-invite-template>Committer Invite Template</a></li>
-<li><a href=#committer-accept-template>Committer Accept Template</a></li>
-<li><a href=#committer-done-template>Committer Done Template</a></li>
+<li><a href=new_committer_process#committer-vote-template>Committer Vote Template</a></li>
+<li><a href=new_committer_process#close-vote-template>Close Vote Template</a></li>
+<li><a href=new_committer_process#committer-invite-template>Committer Invite Template</a></li>
+<li><a href=new_committer_process#committer-accept-template>Committer Accept Template</a></li>
+<li><a href=new_committer_process#committer-done-template>Committer Done Template</a></li>
 </ul>
 </li>
 </ul>
@@ -240,9 +240,9 @@ ${Work list}[1]
 </code></pre></div><p>Note that, Voting ends one week from today, i.e. <a href="https://www.timeanddate.com/counters/customcounter.html?year=YYYY&month=MM&day=DD">midnight UTC on YYYY-MM-DD</a>
 See voting <a href=https://community.apache.org/newcommitter.html>guidelines</a></p>
 <h3 id=close-vote-template>Close Vote Template</h3>
-<pre><code class=language-test data-lang=test>To: private@kyuubi.apache.org
+<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-text data-lang=text>To: private@kyuubi.apache.org
 Subject: [RESULT] [VOTE] New committer: ${NEW_COMMITTER_NAME}
-</code></pre><div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-text data-lang=text>Hi Kyuubi PPMC,
+</code></pre></div><div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-text data-lang=text>Hi Kyuubi PPMC,
 
 The vote has now closed. The results are:
 
