deploy: 225b0ae47b508e467a28a9b3558e261cfdf5d5c7

--- a/content/become_committer.html
+++ b/content/become_committer.html
@@ -233,6 +233,7 @@ project maintenance</li>
 <li>Be active, courteous, and respectful for pull requests reviewing</li>
 <li>Be involved in the design road map discussions with a professional
 and diplomatic approach even if there is a disagreement</li>
+<li>Promoting the project by writing articles or holding events</li>
 </ul>
 </div>
 <footer class=footer>
