deploy: 5c737d610c2cd374844a9ae48dc1ebb5a7d86236

--- a/content/improvement-proposals.html
+++ b/content/improvement-proposals.html
@@ -244,7 +244,7 @@ Apache Software Foundation
 <h3 id=discussing-a-kbip>Discussing a KBIP</h3>
 <p>All discussions of a KBIP should take place in a public forum, preferably the discussion attached to the ticket. Any discussion that happen offline should be made available online for the public via meeting notes summarizing the discussions.</p>
 <h3 id=implementing-a-kbip>Implementing a KBIP</h3>
-<p>Implementation should take place via the <a href=contributing.html>contribution guidelines</a>. Changes that require KBIPs typically also require design documents to be written and reviewed.</p>
+<p>Implementation should take place via the <a href=issue_tracking.html>contribution guidelines</a>. Changes that require KBIPs typically also require design documents to be written and reviewed.</p>
 </div>
 <footer class=footer>
 <div class=footerBox>
