--- a/content/index.html
+++ b/content/index.html
@@ -309,7 +309,7 @@ Apache Kyuubi (Incubating), a distributed and multi-tenant gateway to provide se
 <p class=communityItemTitle>Source Code</p>
 <span class=communityLine></span>
 </a>
-<a class=communityItem href=https://kyuubi.apache.org/contributing.html>
+<a class=communityItem href=https://kyuubi.apache.org/issue_tracking.html>
 <img class=communityItemImg src=/homePageImg/community3.png>
 <p class=communityItemTitle>How to Contribute</p>
 <span class=communityLine></span>
