deploy: ce05fd76c4ad6c9048726e01d18f22109935a0d9

--- a/content/pull_request.html
+++ b/content/pull_request.html
@@ -213,9 +213,10 @@ They&rsquo;re also a great way to help track things that should be done for ever
 See <a href=https://github.com/apache/incubator-kyuubi/blob/master/.github/PULL_REQUEST_TEMPLATE>Pull Request Template</a>.</p>
 <h3 id=after>After</h3>
 <p>It may take some time to wait other developer to review. Feel free to ping any committer who has worked on the similar area.
-In general, You can find out the right people to review your code through git commit history.</p>
-<p>One more thing, Kyuubi leverage github action to cover unit test and integration test, so please make sure your pull request&rsquo;s
-tests are green. It will Speed up the merging :).</p>
+In general, you can find out the right people to review your code through git commit history.</p>
+<p>One more thing, Kyuubi leverages <a href=https://github.com/apache/incubator-kyuubi/actions>Github Actions</a> to cover unit
+test and integration test on Linux AMD64 and <a href=https://app.travis-ci.com/github/apache/incubator-kyuubi>TravisCI</a>
+on Linux ARM64, so please make sure your pull request&rsquo;s tests are green. It will Speed up the merging :).</p>
 </div>
 <footer class=footer>
 <div class=footerBox>
