--- a/content/download/index.html
+++ b/content/download/index.html
@@ -350,13 +350,12 @@ Apache, the Apache Feather logo, and the Apache Incubator project logo are trade
 <div class=footerBlock></div>
 <div class=footerCopyRightContent>
 <span>Copyright © 2021-2022 The Apache Software Foundation</span>
-<span class=footerP2>The Apache Software Foundation</span>
 <a class=fgooterPrivacy href=/privacy_policy.html>Privacy policy</a>
 </div>
 </div>
 </div>
 </footer>
-<script src="/js/vendor/  semantic.min.js"></script>
+<script src=/js/vendor/semantic.min.js></script>
 <script src=https://www.apachecon.com/event-images/snippet.js></script>
 <script src=/js/vendor/jquery-1.12.4.min.js></script>
 <script>window.jQuery||document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
