deploy: a9c2d7ddae9763cbe0fd870b4bad315be8ce1b0c

--- a/content/project_history.html
+++ b/content/project_history.html
@@ -208,6 +208,12 @@ Apache Software Foundation
 <td class="center aligned"><a href=/news/2022-01-31-release-1.4.1-incubating.html>see more</a></td>
 </tr>
 <tr>
+<td class="center aligned">2021 Dec 25 </td>
+<td class="center aligned">New committers: Dongdong Hong & Vino Yang</td>
+<td class="center aligned">We are happy to announce Dongdong Hong & Vino Yang(yanghua) becomes new Kyuubi committers.</td>
+<td class="center aligned"><a href=/news/2021-12-25-new-committers.html>see more</a></td>
+</tr>
+<tr>
 <td class="center aligned">2021 Dec 10 </td>
 <td class="center aligned">Apache Kyuubi(Incubating) 1.4.0-incubating released</td>
 <td class="center aligned">
