deploy: 78d0a8f73cd6de389b07614e49a5bdebad37cb89

--- a/content/index.html
+++ b/content/index.html
@@ -31,6 +31,7 @@ Documentation
 <div class="childNavContainer">
 <ul class="childNav">
 <li><a class="childNavLink" href="docs/latest/index.html">Latest</a></li>
+<li><a class="childNavLink" href="https://kyuubi.readthedocs.io/en/latest/index.html">Master(unreleased)</a></li>
 <li role="separator" class="dividerLine"></li>
 <li><a class="childNavLink" href="docs/r1.5.0-incubating/">1.5.0-incubating</a></li>
 <li><a class="childNavLink" href="docs/r1.4.1-incubating/">1.4.1-incubating</a></li>
@@ -115,6 +116,7 @@ Documentation
 <div class="childNavContainer">
 <ul class="childNav">
 <li><a class="childNavLink" href="docs/latest/index.html">Latest</a></li>
+<li><a class="childNavLink" href="https://kyuubi.readthedocs.io/en/latest/index.html">Master(unreleased)</a></li>
 <li role="separator" class="dividerLine"></li>
 <li><a class="childNavLink" href="docs/r1.5.0-incubating/">1.5.0-incubating</a></li>
 <li><a class="childNavLink" href="docs/r1.4.1-incubating/">1.4.1-incubating</a></li>
