--- a/content/developer-tools.html
+++ b/content/developer-tools.html
@@ -17,7 +17,7 @@
 <body>
 <div id="nav_mask" class="nav_mask" style="display:none"></div>
 <nav id="header" class="header">
-<a href="/">
+<a href="/en">
 <img class="navbar_logo" src="/kyuubi_logo_hd.png">
 </a>
 <ul class="navContainer">
@@ -85,6 +85,17 @@ ASF
 <li><a class="childNavLink" href="https://www.apache.org/security/">Security</a></li>
 <li><a class="childNavLink" href="https://www.apache.org/foundation/sponsorship.html">Sponsorship</a></li>
 <li><a class="childNavLink" href="https://www.apache.org/foundation/thanks.html">Thanks</a></li>
+</ul>
+</div>
+</li>
+<li class="navItem">
+<a href="javascript:;" class="navLink navLinkWithChild" role="button" aria-haspopup="true" aria-expanded="false">
+Language
+<span class="navAngle"></span>
+</a>
+<div class="childNavContainer">
+<ul class="childNav">
+<li><a class="childNavLink" href="https://kyuubi.apache.org/zh/developer-tools.html">简体中文</a></li>
 </ul>
 </div>
 </li>
@@ -171,6 +182,17 @@ ASF
 <li><a class="childNavLink" href="https://www.apache.org/security/">Security</a></li>
 <li><a class="childNavLink" href="https://www.apache.org/foundation/sponsorship.html">Sponsorship</a></li>
 <li><a class="childNavLink" href="https://www.apache.org/foundation/thanks.html">Thanks</a></li>
+</ul>
+</div>
+</li>
+<li class="navItem">
+<a href="javascript:;" class="navLink navLinkWithChild" role="button" aria-haspopup="true" aria-expanded="false">
+Language
+<span class="navAngle"></span>
+</a>
+<div class="childNavContainer">
+<ul class="childNav">
+<li><a class="childNavLink" href="https://kyuubi.apache.org/zh/developer-tools.html">简体中文</a></li>
 </ul>
 </div>
 </li>
