--- a/content/index.html
+++ b/content/index.html
@@ -18,7 +18,7 @@
 <body>
 <div id="nav_mask" class="nav_mask" style="display:none"></div>
 <nav id="header" class="header">
-<a href="/">
+<a href="/en">
 <img class="navbar_logo" src="/kyuubi_logo_hd.png">
 </a>
 <ul class="navContainer">
@@ -86,6 +86,17 @@ ASF
 <li><a class="childNavLink" href="https://www.apache.org/security/">Security</a></li>
 <li><a class="childNavLink" href="https://www.apache.org/foundation/sponsorship.html">Sponsorship</a></li>
 <li><a class="childNavLink" href="https://www.apache.org/foundation/thanks.html">Thanks</a></li>
+</ul>
+</div>
+</li>
+<li class="navItem">
+<a href="javascript:;" class="navLink navLinkWithChild" role="button" aria-haspopup="true" aria-expanded="false">
+Language
+<span class="navAngle"></span>
+</a>
+<div class="childNavContainer">
+<ul class="childNav">
+<li><a class="childNavLink" href="https://kyuubi.apache.org/zh/">简体中文</a></li>
 </ul>
 </div>
 </li>
@@ -175,6 +186,17 @@ ASF
 </ul>
 </div>
 </li>
+<li class="navItem">
+<a href="javascript:;" class="navLink navLinkWithChild" role="button" aria-haspopup="true" aria-expanded="false">
+Language
+<span class="navAngle"></span>
+</a>
+<div class="childNavContainer">
+<ul class="childNav">
+<li><a class="childNavLink" href="https://kyuubi.apache.org/zh/">简体中文</a></li>
+</ul>
+</div>
+</li>
 </ul>
 <a class="shareImgContainer" href="https://www.apache.org/">
 Apache Software Foundation
@@ -190,7 +212,7 @@ Apache Software Foundation
 <div class="contentBlock">
 <img class="bannerBg" src="/homePageImg/indexBanner.png">
 <div class="bannerContent">
-<p class="bannerTitle">Serverless SQL on Lakehouse</p>
+<p class="bannerTitle">Serverless SQL on Lakehouse </p>
 <p class="bannerDesc">
 Apache Kyuubi (Incubating), a distributed and multi-tenant gateway to provide serverless SQL on lakehouses.
 </p>
@@ -296,7 +318,7 @@ Apache Kyuubi (Incubating), a distributed and multi-tenant gateway to provide se
 </div>
 <div class="useCaseItem">
 <p class="useCaseItemTitle">Data Lake & Lakehouses</p>
-<p class="useCaseItemDesc">Kyuubi supports query all traditional data warehouses, delta lakes, like Apache Hive/HDFS, or modern lakehouses, like Apache Iceberg, Apache Hudi, and Delta Lake, together. Kyuubi also provides multi catalog meta APIs that present a sizeable centralized picture of all your data in front of you and help you innovate faster. The ability to query disparate data sources in a single entrance with the ANSI standard SQL syntaxes greatly simplifies data insight while providing authentication and authorization to keep all data secure.</p>
+<p class="useCaseItemDesc">Kyuubi supports query all traditional data warehouses, like Apache Hive/HDFS, or modern lakehouses, like Apache Iceberg, Apache Hudi, and Delta Lake, together. Kyuubi also provides multi catalog meta APIs that present a sizeable centralized picture of all your data in front of you and help you innovate faster. The ability to query disparate data sources in a single entrance with the ANSI standard SQL syntaxes greatly simplifies data insight while providing authentication and authorization to keep all data secure.</p>
 </div>
 </div>
 </div>
