deploy: 08e53af79a981688f79ce680e7e921b0b5967a57

--- a/content/become_committer.html
+++ b/content/become_committer.html
@@ -255,6 +255,9 @@ Apache Software Foundation
 <tr>
 <td>Xiduo You</td>
 </tr>
+<tr>
+<td>Zhen Wang</td>
+</tr>
 </tbody>
 </table>
 <h2 id="become-a-committer-of-apache-kyuubi">Become A Committer of Apache Kyuubi</h2>
