--- a/content/zh/become_committer.html
+++ b/content/zh/become_committer.html
@@ -255,6 +255,9 @@ Apache Software Foundation
 <tr>
 <td>Xiduo You</td>
 </tr>
+<tr>
+<td>Zhen Wang</td>
+</tr>
 </tbody>
 </table>
 <p>任何支持社区并在任何 CoPDoC 领域工作的人都可以成为 Apache Kyuubi Committer。
